# my-openenv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  client.py  email_env.py  gym.py  inference.py  metadata.json  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
